[package]
name = "rcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromecast = "0.18.2"
iced = "0.9.0"
mime_guess = "2.0.4"
reqwest = {verson="0.11.17", features=["json"]}
serde_json = "1.0.96"
tokio = {version="1.28.1", features=["full"]}
